demo-library/src/main/java/com/example/demo/library/errors/DefaultDomainProblem.java
package com.example.demo.library.errors;

public class DefaultDomainProblem extends AbstractDomainProblem<DomainError> {

}
